# sharkuscator

./: .gitignore  LICENSE  README.md  TODO.md  calculations.txt  evaluate.bat  settings.gradle.kts
.github/workflows/: release.yml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native_class_encrypter/: .gitignore  CMakeLists.txt  class_decrypter.cpp  class_encrypter.h  decrypter_agent.cpp  decrypter_agent.h
native_class_encrypter/includes/: xxtea.h
native_class_encrypter/src/: class_decrypter.h  class_encrypter.cpp  class_encrypter.h  decrypter_agent.cpp
native_class_encryptor/: CMakeLists.txt
native_class_encryptor/includes/: xxtea.cpp  xxtea.h
native_class_encryptor/src/: class_decryptor.cpp  class_encryptor.cpp  class_encryptor.h  decryptor_agent.cpp
sharkuscator.annotations/: build.gradle.kts
sharkuscator.annotations/src/main/kotlin/dev/sharkuscator/annotations/: DoNotObfuscate.kt  Exclude.kt  LightObfuscation.kt
sharkuscator.commons/: build.gradle.kts
sharkuscator.obfuscator/: build.gradle.kts
sharkuscator.obfuscator/src/main/resources/: log4j.properties
sharkuscator.obfuscator/src/test/java/: DynamicInvokeDecode.java
sharkuscator.obfuscator/src/test/java/dynamic_invoke/: DynamicInvokeDecode.java
sharkuscator.obfuscator/src/test/java/encryption/: BitwiseStateObject.java  LongConstantEncryption.java  OperationTarget.java  StateConfigurator.java
sharkuscator.obfuscator/src/test/java/long_constant/: BitwiseStateObject.java  LongConstantEncryption.java  OperationTarget.java  StateConfigurator.java
sharkuscator.obfuscator/src/test/java/string_encrypt/: StringEncryptTest.java
sharkuscator.standalone/: build.gradle.kts
sharkuscator.standalone/src/main/kotlin/dev/sharkuscator/: BootstrapSharkuscator.kt  ObfuscatorArguments.kt
(+236 files in other folders)
